--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -29,6 +29,8 @@
                 <li class="mb-2"><a href="#" class="text-light">Register</a></li>
                 <li class="mb-2"><a href="#" class="text-light">Wishlist</a></li>
                 <li class="mb-2"><a href="#" class="text-light">Our Products</a></li>
+                <li class="mb-2"><a routerLink="/adminlogin" class="text-light">Our Products</a></li>
+               
               </ul>
             </div>
             <div class="col-lg-4 col-md-6 mb-lg-0">
