--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,7 +23,7 @@
                 <div class="orDiv">Or</div>
     
                 <p class="text">Sign IN with Email Address</p>
-                <form autocomplete="off" [formGroup]="profileForm" (ngSubmit)="Submit()" >
+                <form autocomplete="off" [formGroup]="profileForm" (ngSubmit)="Submit()">
                     <div class="formGroup">
                         <i class="far fa-envelope"></i>
                         <div><input type="email" name="email" id="email" placeholder="Enter Email" formControlName="email"></div>
@@ -46,7 +46,7 @@
             <!-- Right section of responsive registration form -->
             <div class="welcomeDiv">
                 <h2>Welcome Back!</h2>
-                <p class="text">An inch of time is an inch of gold, but you can’t buy that inch of time with an inch of gold
+                <p class="text">An inch of time is an inch of gold, but you cant buy that inch of time with an inch of gold
                 </p>
                 <button class="btn2" routerLink="/register">SIGN UP</button>
             </div>
