--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link active" aria-current="page" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/home">Product</a>
+        <a class="nav-link text-light" routerLink="/home">Product</a>
       </li>
     </ul>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -35,7 +35,7 @@
           <h5 class="text-light"><strong>{{user.displayName}}</strong></h5>
          
           <div class="dropdown-content">
-            <button class="btn btn-danger"    (click)="logout()">Logout</button>
+            <button class="btn btn-danger"(click)="logout()">Logout</button>
 
           </div>
         </div>
